[BUGFIX] adjust hexagon size on mobile

--- a/assets/hexagon.scss
+++ b/assets/hexagon.scss
@@ -6,7 +6,7 @@
   --hex-icon: 50px;
 
   @media only screen and (max-width: 768px) {
-    --hex-width: 80px;
+    --hex-width: 70px;
     --hex-between: 5px;
     --hex-icon: 15px;
   }
